--- a/source/composer.json
+++ b/source/composer.json
@@ -12,12 +12,14 @@
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/test-pack": "^1.0",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/maker-bundle": "^1.14",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/test-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
