--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 # GitHub Action for Symfony
 name: Testing Symfony
 on: [push, pull_request]
+defaults:
+  run:
+    working-directory: source
 jobs:
   symfony:
     name: Symfony (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
