--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,7 @@ jobs:
       - name: Install Composer dependencies
         run: |
           composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
-      - name: Run Tests
-        run: php bin/phpunit --coverage-text
+      #- name: Run Tests
+      #  run: php bin/phpunit --coverage-text
+      - name: Run php-cs-fixer
+        run: vendor/bin/php-cs-fixer fix --dry-run --diff --ansi
