--- a/source/composer.json
+++ b/source/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "squizlabs/php_codesniffer": "^3.5",
+        "staabm/annotate-pull-request-from-checkstyle": "^1.1",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0"
     },
