--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
       #- name: Run Tests
       #  run: php bin/phpunit --coverage-text
       - name: Run php-cs-fixer
-        run: vendor/bin/php-cs-fixer fix --dry-run --format=checkstyle | cs2pr
+        run: vendor/bin/php-cs-fixer --format=checkstyle | cs2pr
