--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,4 @@ jobs:
       #- name: Run Tests
       #  run: php bin/phpunit --coverage-text
       - name: Run php-cs-fixer
-        # run: vendor/bin/php-cs-fixer --format=checkstyle | cs2pr
-        run: vendor/bin/phpcs -q --report=checkstyle | cs2pr --graceful-warnings  
+        run: vendor/bin/php-cs-fixer fix --diff --dry-run --format=checkstyle | cs2pr --graceful-warnings  
