--- a/.github/workflows/phpqs.yml
+++ b/.github/workflows/phpqs.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches: [ develop ]
 
+defaults:
+  run:
+    working-directory: source
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
