--- a/.github/workflows/phpqs.yml
+++ b/.github/workflows/phpqs.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
       
-      - name: Run PHPStan
-        run: phpstan analyse --error-format=checkstyle source/src  | cs2pr
+      #- name: Run PHPStan
+      #  run: phpstan analyse --error-format=checkstyle source/src  | cs2pr
         
       - name: Run PHP-CS-Fixer
         run: php-cs-fixer fix --dry-run --using-cache=false --rules=@PSR2 --format=checkstyle ./source/src | cs2pr
