--- a/.github/workflows/phpqs.yml
+++ b/.github/workflows/phpqs.yml
@@ -10,9 +10,9 @@ on:
   pull_request:
     branches: [ develop ]
 
-defaults:
-  run:
-    working-directory: source
+#defaults:
+#  run:
+#    working-directory: .
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
